# easy-rtsp

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  cut-release.yml  release.yml
src/easy_rtsp/: __init__.py  backend.py  cli.py  config.py  exceptions.py  ffmpeg_util.py  install_backends.py  log.py  process_io.py  publish.py  serve_url.py  stream.py  types.py
src/easy_rtsp/sources/: __init__.py  base.py  decode.py  file.py  frames.py  rtsp.py  webcam.py
test_scripts/: 01_iterate_synthetic_frames.py  02_map_opencv_annotate.py  03_map_numpy_transforms.py  04_map_chained_drop.py  05_webcam_serve.py  06_file_serve.py  07_relay_serve.py  08_serve_full_rtsp_url.py  09_config_and_stream_state.py  10_context_manager.py  11_synthetic_publish_timed.py  12_file_loop_serve.py  README.md
tests/: test_backend_config.py  test_backend_process.py  test_cli.py  test_decode.py  test_file_source.py  test_frames_source.py  test_install_backends.py  test_publish.py  test_rtsp_reconnect.py  test_serve_url.py  test_stream_map_and_api.py  test_stream_status.py  test_stream_viewer_url.py  test_webcam_probe.py
