[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-rtsp"
version = "0.1.0"
description = "Ingest, transform, and re-host video over RTSP with a simple Python API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "easy-rtsp contributors" }]
keywords = ["rtsp", "video", "ffmpeg", "streaming", "opencv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/easy-rtsp/easy-rtsp"

[project.scripts]
easy-rtsp = "easy_rtsp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
